--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+h1 {
+font-size: 50px;
+}
 h3 {
   display: inline;
   padding-right: 825px;
@@ -17,6 +21,7 @@ button {
      work in a browser made by that vendor either, it's just for
      future-proofing purposes I guess. */
   background:  #1F253D;
+  margin: 10px;
   color: grey;
   border-style: thin;
   border-color: grey;
@@ -39,20 +44,25 @@ button:hover {
 }
 .gameContainer {
 margin: 0 auto;
-width: 300px;
+width: 450px;
 color: black;
 padding-bottom: 200px;
-padding-top:200px;
+padding-top: 20px;
+border-radius: 10px;
 }
+
 input {
-  height:50px;
-  margin:30px;
+  background: #394264;
+  margin: 0 auto;
+  height: 50px;
+  display: block;
   border: 1px solid;
   border-radius: 5px;
 }
 
-.input_box, input {
+.input_box {
   background: #394264;
+  padding: 15px;
   /*border: none;*/
   display: block;
   margin: 0 auto;
@@ -60,10 +70,16 @@ input {
 
 .prev_guesses {
   background: #11A8AB;
+  height: 30px;
+  padding: 20px;
+  font-weight: bold;
+
 }
 
 
 .results_box {
+  font-weight: bold;
   background: #CC324B;
-
+  height: 30px;
+  padding: 20px;
 }
